@@ -20,6 +20,9 @@ Revision history for Perl extension App::Sqitch
        tag-qualified to eliminate ambiguity. Now reworked dependencies may be
        required without tag-qualification, though tag-qualification should still
        be specified if functionality as of a particular tag is required.
+     - Added the `--directory`/`-C` option to specify a directory to change to
+       before executing any Sqitch commands. Thansk to Thomas Sibley for the
+       suggestion (#411).
 
 0.9998 2018-10-03T20:53:58Z
      - Fixed an issue where Sqitch would sometimes truncate the registry
